--- a/html/nb.html
+++ b/html/nb.html
@@ -43,7 +43,7 @@
     <script src="//unpkg.com/alpinejs"></script>
     <script>
         Alpine.data("data", () => ({
-            input: "Gender,Car Type,Shirt Size,Class\nM,Family,Small,C0\nM,Sports,Medium,C0\nM,Sports,Medium,C0\nM,Sports,Large,C0\nM,Sports,Extra Large,C0\nM,Sports,Extra Large,C0\nF,Sports,Small,C0\nF,Sports,Small,C0\nF,Sports,Medium,C0\nF,Luxury,Large,C0\nM,Family,Large,C1\nM,Family,Extra Large,C1\nM,Family,Medium,C1\nM,Luxury,Extra Large,C1\nF,Luxury,Small,C1\nF,Luxury,Small,C1\nF,Luxury,Medium,C1\nF,Luxury,Medium,C1\nF,Luxury,Medium,C1\nF,Luxury,Large,C1",
+            input: "",
             output: "",
             cmd: "",
             exec() {
@@ -115,7 +115,7 @@
             </a>
             <img class="icon" src="/favicon-light.png">
             <div class="col">
-                <h2 class="text-white mb-0">Machine Learning</h2>
+                <h2 class="text-white mb-0">Naive Bayes</h2>
             </div>
         </div>
         <div class="row mb-3">
