--- a/html/knn.html
+++ b/html/knn.html
@@ -43,9 +43,9 @@
     <script src="//unpkg.com/alpinejs"></script>
     <script>
         Alpine.data("data", () => ({
-            dataset: "1,1,1,2,3,3,3,4,5\n1,2,4,3,0,2,5,4,3\n+,-,-,+,+,+,-,-,-",
-            x: 4,
-            y: 2,
+            dataset: "",
+            x: 0,
+            y: 0,
             output: "",
             cmd: "",
             exec() {
