--- a/html/index.html
+++ b/html/index.html
@@ -57,6 +57,9 @@
             <div class="col-12 mb-3">
                 <a href="/knn" class="btn btn-outline-dark w-100">K-Nearest Neighbor</a>
             </div>
+            <div class="col-12 mb-3">
+                <a href="/terms" class="btn btn-outline-dark w-100">Terms</a>
+            </div>
         </div>
     </div>
 
