--- a/html/nb.html
+++ b/html/nb.html
@@ -5,7 +5,8 @@
     <title>Naive Bayes</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/json.css" />
+    <link rel="stylesheet" href="/Treant.css">
+    <link rel="stylesheet" href="/vendor/perfect-scrollbar/perfect-scrollbar.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet"
@@ -39,6 +40,29 @@
         a.icon .icon {
             width: 32px;
         }
+
+        .chart {
+            height: 100%;
+            width: 100%;
+            margin: 0 !important;
+            padding: 0 !important;
+        }
+
+        .node {
+            border: 2px solid var(--bs-dark);
+            border-radius: 3px;
+            background-color: white;
+        }
+
+        .node p {
+            padding: 1rem;
+            margin: 0;
+        }
+
+        .node-dark {
+            color: var(--bs-light);
+            background-color: var(--bs-dark);
+        }
     </style>
     <script src="//unpkg.com/alpinejs"></script>
     <script>
@@ -65,7 +89,7 @@
                     this.output = ""
 
                     if (this.cmd == "tree") {
-                        $('#tree').jsonViewer(JSON.parse(res), { collapsed: false });
+                        this.showTree(JSON.parse(res))
                     } else if (this.cmd == "showTables") {
                         this.showTables(JSON.parse(res))
                     } else {
@@ -111,6 +135,57 @@
                     tableContainer.appendChild(table)
                     tree.appendChild(tableContainer);
                 }
+            },
+            makeTree(data) {
+                let result = []
+                for (let key in data) {
+                    let htmlClass = ""
+                    if (key.includes("=")) htmlClass = "node-dark"
+                    if (typeof data[key] == "string") {
+                        let childHtmlClass = ""
+                        if (data[key].includes("=")) childHtmlClass = "node-dark"
+                        result.push({
+                            text: { name: key },
+                            HTMLclass: htmlClass,
+                            children: [{
+                                text: {name: data[key] },
+                                HTMLclass: childHtmlClass
+                            }]
+                        })
+                    } else result.push({
+                            text: {
+                                name: key,
+                            },
+                            HTMLclass: htmlClass,
+                            children: this.makeTree(data[key])
+                        })
+                }
+                return result
+            },
+            showTree(data) {
+                new Treant({
+                    chart: {
+                        container: `#tree`,
+                        levelSeparation: 25,
+                        siblingSeparation: 70,
+                        subTeeSeparation: 70,
+                        nodeAlign: "BOTTOM",
+                        scrollbar: "fancy",
+                        padding: 35,
+                        connectors: {
+                            type: "curve",
+                            style: {
+                                "stroke-width": 2,
+                                "stroke-linecap": "round",
+                                "stroke": "#212529"
+                            }
+                        }
+                    },
+
+                    nodeStructure: this.makeTree(data)[0]
+                })
+                let t = document.getElementById("tree")
+                t.scrollLeft = (t.scrollWidth - (window.outerWidth / 2)) / 2
             }
         }))
     </script>
@@ -201,7 +276,12 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="/json.js"></script>
+    <script src="/vendor/raphael.js"></script>
+    <script src="/Treant.js"></script>
+
+    <script src="/vendor/jquery.mousewheel.js"></script>
+    <script src="/vendor/perfect-scrollbar/perfect-scrollbar.js"></script>
+
 </body>
 
 </html>
