--- a/html/index.html
+++ b/html/index.html
@@ -58,6 +58,9 @@
                 <a href="/knn" class="btn btn-outline-dark w-100">K-Nearest Neighbor</a>
             </div>
             <div class="col-12 mb-3">
+                <a href="/ann" class="btn btn-outline-dark w-100">Artificial Neural Network</a>
+            </div>
+            <div class="col-12 mb-3">
                 <a href="/terms" class="btn btn-outline-dark w-100">Terms</a>
             </div>
         </div>
