(+) Randomize Bias and Weight

--- a/html/ann.html
+++ b/html/ann.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>K-Nearest Neighbor</title>
+    <title>Artificial Neural Network</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/json.css" />
